# nodeeditor

./: CMakeLists.txt
src/: ConnectionStyle.cpp  FlowScene.cpp  NodePainter.cpp
